# cleaner-gui

./: CMakeLists.txt  LICENSE  README.md  bridge.cpp  bridge.hpp  main.cpp  main.qml
cleaner/: clean.cpp  clean.hpp  main.cpp  types.hpp
